<resources>
    <string name="app_name">company directory</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="create_company">Crear Compañia</string>
    <string name="name">Nombre</string>
    <string name="address">Dirección</string>
    <string name="nit">NIT</string>
    <string name="phone">Teléfono</string>
    <string name="new_company">Nueva Compañia</string>
    <string name="save">Guardar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="company_created">¡La compañia se ha creado exitosamente!</string>
    <string name="company_updated">¡La compañia se ha editado exitosamente!</string>
    <string name="company_deleted">¡La compañia se ha eliminado correctamente!</string>
</resources>