<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.form.CompanyFormFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="@dimen/padding"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/create_company"
                android:textColor="@color/title"
                android:textSize="@dimen/title"
                android:layout_marginBottom="20dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:hint="@string/name"
                style="@style/EditTextInputLayoutStyle"
                android:layout_marginBottom="@dimen/input_margin_bottom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    style="@style/InputTextFont"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:hint="@string/address"
                style="@style/EditTextInputLayoutStyle"
                android:layout_marginBottom="@dimen/input_margin_bottom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    style="@style/InputTextFont"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:hint="@string/nit"
                style="@style/EditTextInputLayoutStyle"
                android:layout_marginBottom="@dimen/input_margin_bottom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    style="@style/InputTextFont"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:hint="@string/phone"
                style="@style/EditTextInputLayoutStyle"
                android:layout_marginBottom="@dimen/input_margin_bottom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    style="@style/InputTextFont"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_button_height"
                android:text="@string/save"
                android:layout_marginBottom="@dimen/input_margin_bottom"
                style="@style/ButtonStyle" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>